Incorporate mandatory JVM flags and Hodgepodge mod based on lwjgl3ify instructions